[package]
name = "learning-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.1.0"
winit = { version = "0.29", features = ["rwh_05"] }
add-one = { path = "../add-one" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
cfg-if = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
 