[package]
name = "learning-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.1.0"
winit = { version = "0.29", features = ["rwh_05"] }
add-one = { path = "../add-one" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
cfg-if = "1.0.0"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["Document", "Element", "Window"] }
image = "0.25.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Element", "Window"] }

[lib]
crate-type = ["cdylib", "rlib"]
 