[package]
name = "wasmsample2"
version = "0.1.0"
edition = "2021"

[dependencies]
add-one = { path = "../add-one" }
anyhow = "1.0.86"
bytemuck = { version = "1.16.3", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.11.5"
image = "0.25.2"
log = "0.4.22"
wgpu = "22.1.0"
winit = { version = "0.29", features = ["rwh_05"] }
